--- a/karuzela.css
+++ b/karuzela.css
@@ -1,58 +1,35 @@
-.box {
-	width: 227px;
-	height: 227px;
-	background-color: #f6f6f6;
-  }  
-  .box a {
-	color: #461e52;
-	display: block;
+.wrapper {
+	height: 200px;
+	width: 632px;
+	position: relative;
+	overflow: hidden;
+	margin: 0 auto;
+  }
+  
+  .button-wrapper {
 	width: 100%;
 	height: 100%;
-	font-size: 22px;
-	font-weight: 700;
-	padding: 30% 30px 0 30px;
-	text-align: center;
-	transition: none;
-	line-height: 1;
-	font-family: 'Open Sans Condensed', Arial, Verdana, sans-serif;
-  }
-  .box:hover{
-	background-color: #461e52;
-  }
-  .box:hover a{
-   color:#fff;
-   text-decoration:none;
-  }
-  .mission-next-arrow {
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
 	position: absolute;
-	background: url(https://ibb.co/FWsj2tb) no-repeat center;
-	background-size: contain;
-	top: 50%;
-	transform: translateY(-50%);
-	right: -36px;
-	height: 17px;
-	width: 10px;
-	border:none;
   }
-  .mission-next-arrow:hover {
-	cursor: pointer;	
-  }
-  .mission-prev-arrow {
-	background: url(https://ibb.co/8xZhF3V) no-repeat center;
-	background-size: contain;
+  
+  .carousel {
+	margin: 0;
+	padding: 0;
+	list-style: none;
+	width: 100%;
+	display: flex;
 	position: absolute;
-	top: 50%;
-	transform: translateY(-50%);
-	left: -36px;
-	height: 17px;
-	width: 10px;
-	border:none;
-  } 
-  .mission-prev-arrow:hover {
-	cursor: pointer;	
+	left: 0;
+	transition: all 1s ease;
   }
-  .box a.more-links {
-	color: #fff;
-	padding: 70px 110px 0 20px;
-	background: #a89269 url(https://ibb.co/FWsj2tb) no-repeat 155px 170px;
+  
+  .card {
+	background: black;
+	min-width: 200px;
+	height: 200px;
+	margin-right: 1rem;
+	display: inline-block;
   }
